syntaxAnalyzer.output
State 77 conflicts: 2 shift/reduce
State 78 conflicts: 2 shift/reduce
State 134 conflicts: 7 shift/reduce
State 135 conflicts: 2 shift/reduce
State 136 conflicts: 2 shift/reduce
State 137 conflicts: 2 shift/reduce
State 138 conflicts: 2 shift/reduce
State 139 conflicts: 7 shift/reduce
State 140 conflicts: 2 shift/reduce
State 190 conflicts: 2 shift/reduce
State 200 conflicts: 1 shift/reduce
State 201 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "EOF"

    1 program: header declarations subprograms comp_statement "."

    2 header: "program" "IDENTIFIER" ";"

    3 declarations: constdefs typedefs vardefs

    4 constdefs: "const" constant_defs ";"
    5          | ε

    6 constant_defs: constant_defs ";" "IDENTIFIER" "=" expression
    7              | "IDENTIFIER" "=" expression

    8 expression: expression "> or >= or < or <= or <>" expression
    9           | expression "=" expression
   10           | expression "IN" expression
   11           | expression "||" expression
   12           | expression "+ or -" expression
   13           | expression "* or / or DIV or MOD or AND" expression
   14           | expression error expression
   15           | "+ or -" expression
   16           | "NOT" expression
   17           | variable
   18           | "IDENTIFIER" "(" expressions ")"
   19           | "length" "(" expression ")"
   20           | "new" "(" expression ")"
   21           | constant
   22           | "(" expression ")"
   23           | setlistexpression

   24 variable: "IDENTIFIER"
   25         | variable "." "IDENTIFIER"
   26         | variable "[" expressions "]"
   27         | "list function" "(" expression ")"
   28         | "list function" "(" expression error

   29 expressions: expressions "," expression
   30            | expression

   31 constant: "ICONST"
   32         | "RCONST"
   33         | "BCONST"
   34         | "CCONST"

   35 setlistexpression: "[" expressions "]"
   36                  | "[" "]"

   37 typedefs: "type" type_defs ";"
   38         | "type" type_defs error
   39         | ε

   40 type_defs: type_defs ";" "IDENTIFIER" "=" type_def
   41          | "IDENTIFIER" "=" type_def

   42 type_def: "array" "[" dims "]" "of" typename
   43         | "list" "of" typename
   44         | "set" "of" typename
   45         | "record" fields "end"
   46         | limit ".." limit

   47 dims: dims "," limits
   48     | limits

   49 limits: limit ".." limit
   50       | "IDENTIFIER"

   51 limit: sign "ICONST"
   52      | "CCONST"
   53      | "BCONST"
   54      | "+ or -" "IDENTIFIER"
   55      | "IDENTIFIER"

   56 sign: "+ or -"
   57     | ε

   58 typename: standard_type
   59         | "IDENTIFIER"

   60 standard_type: "integer"
   61              | "real"
   62              | "boolean"
   63              | "char"

   64 fields: fields ";" field
   65       | field

   66 field: identifiers ":" typename

   67 identifiers: identifiers "," "IDENTIFIER"
   68            | "IDENTIFIER"

   69 vardefs: "var" variable_defs ";"
   70        | ε

   71 variable_defs: variable_defs ";" identifiers ":" typename
   72              | identifiers ":" typename

   73 subprograms: subprograms subprogram ";"
   74            | ε

   75 subprogram: sub_header ";" "forward"
   76           | sub_header ";" declarations subprograms comp_statement

   77 sub_header: "function" "IDENTIFIER" formal_parameters ":" standard_type
   78           | "function" "IDENTIFIER" formal_parameters ":" "list"
   79           | "procedure" "IDENTIFIER" formal_parameters
   80           | "function" "IDENTIFIER"

   81 formal_parameters: "(" parameter_list ")"
   82                  | ε

   83 parameter_list: parameter_list ";" pass identifiers ":" typename
   84               | pass identifiers ":" typename

   85 pass: "var"
   86     | ε

   87 comp_statement: "begin" statements "end"

   88 statements: statements ";" statement
   89           | statement

   90 statement: assignment
   91          | if_statement
   92          | case_statement
   93          | while_statement
   94          | for_statement
   95          | with_statement
   96          | subprogram_call
   97          | io_statement
   98          | comp_statement
   99          | ε

  100 assignment: variable ":=" expression
  101           | variable ":=" "string"

  102 if_statement: "if" expression "then" statement if_tail
  103             | "if" expression error statement if_tail

  104 if_tail: "else" statement
  105        | ε

  106 case_statement: "case" expression "of" cases case_tail "end"

  107 cases: cases ";" single_case
  108      | single_case

  109 single_case: label_list ":" statement
  110            | ε

  111 label_list: label_list "," label
  112           | label

  113 label: sign constant
  114      | sign "IDENTIFIER"

  115 case_tail: ";" "otherwise" ":" statement
  116          | ε

  117 while_statement: "while" expression "do" statement
  118                | "while" expression error statement

  119 for_statement: "for" "IDENTIFIER" ":=" iter_space "do" statement

  120 iter_space: expression "to" expression
  121           | expression "downto" expression

  122 with_statement: "with" variable "do" statement

  123 subprogram_call: "IDENTIFIER"
  124                | "IDENTIFIER" "(" expressions ")"

  125 io_statement: "read" "(" read_list ")"
  126             | "write" "(" write_list ")"

  127 read_list: read_list "," read_item
  128          | read_item

  129 read_item: variable

  130 write_list: write_list "," write_item
  131           | write_item

  132 write_item: expression
  133           | "string"


Terminals, with rules where they appear

    "EOF" (0) 0
    error (256) 14 28 38 103 118
    "program" <str> (258) 2
    "const" <str> (259) 4
    "type" <str> (260) 37 38
    "array" <str> (261) 42
    "list" <str> (262) 43 78
    "set" <str> (263) 44
    "of" <str> (264) 42 43 44 106
    "record" <str> (265) 45
    "var" <str> (266) 69 85
    "function" <str> (267) 77 78 80
    "procedure" <str> (268) 79
    "integer" <str> (269) 60
    "real" <str> (270) 61
    "boolean" <str> (271) 62
    "char" <str> (272) 63
    "forward" <str> (273) 75
    "length" <str> (274) 19
    "new" <str> (275) 20
    "begin" <str> (276) 87
    "end" <str> (277) 45 87 106
    "if" <str> (278) 102 103
    "then" <str> (279) 102
    "else" <str> (280) 104
    "while" <str> (281) 117 118
    "do" <str> (282) 117 119 122
    "case" <str> (283) 106
    "otherwise" <str> (284) 115
    "for" <str> (285) 119
    "to" <str> (286) 120
    "downto" <str> (287) 121
    "with" <str> (288) 122
    "read" <str> (289) 125
    "write" <str> (290) 126
    "> or >= or < or <= or <>" (291) 8
    "+ or -" (292) 12 15 54 56
    "||" (293) 11
    "* or / or DIV or MOD or AND" (294) 13
    "NOT" (295) 16
    "IN" (296) 10
    "(" (297) 18 19 20 22 27 28 81 124 125 126
    ")" (298) 18 19 20 22 27 81 124 125 126
    ";" (299) 2 4 6 37 40 64 69 71 73 75 76 83 88 107 115
    "." (300) 1 25
    "," (301) 29 47 67 111 127 130
    "=" (302) 6 7 9 40 41
    ":" (303) 66 71 72 77 78 83 84 109 115
    "[" (304) 26 35 36 42
    "]" (305) 26 35 36 42
    ":=" (306) 100 101 119
    ".." (307) 46 49
    "IDENTIFIER" <str> (308) 2 6 7 18 24 25 40 41 50 54 55 59 67 68 77 78 79 80 114 119 123 124
    "ICONST" <integer> (309) 31 51
    "RCONST" <real> (310) 32
    "BCONST" <character> (311) 33 53
    "CCONST" <character> (312) 34 52
    "list function" (313) 27 28
    "string" (314) 101 133
    LOWER_THAN_ELSE (315)


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    program <str> (62)
        on left: 1
        on right: 0
    header <str> (63)
        on left: 2
        on right: 1
    declarations <str> (64)
        on left: 3
        on right: 1 76
    constdefs <str> (65)
        on left: 4 5
        on right: 3
    constant_defs <str> (66)
        on left: 6 7
        on right: 4 6
    expression <str> (67)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
        on right: 6 7 8 9 10 11 12 13 14 15 16 19 20 22 27 28 29 30 100 102 103 106 117 118 120 121 132
    variable <str> (68)
        on left: 24 25 26 27 28
        on right: 17 25 26 100 101 122 129
    expressions <str> (69)
        on left: 29 30
        on right: 18 26 29 35 124
    constant <str> (70)
        on left: 31 32 33 34
        on right: 21 113
    setlistexpression <str> (71)
        on left: 35 36
        on right: 23
    typedefs <str> (72)
        on left: 37 38 39
        on right: 3
    type_defs <str> (73)
        on left: 40 41
        on right: 37 38 40
    type_def <str> (74)
        on left: 42 43 44 45 46
        on right: 40 41
    dims <str> (75)
        on left: 47 48
        on right: 42 47
    limits <str> (76)
        on left: 49 50
        on right: 47 48
    limit <str> (77)
        on left: 51 52 53 54 55
        on right: 46 49
    sign <str> (78)
        on left: 56 57
        on right: 51 113 114
    typename <str> (79)
        on left: 58 59
        on right: 42 43 44 66 71 72 83 84
    standard_type <str> (80)
        on left: 60 61 62 63
        on right: 58 77
    fields <str> (81)
        on left: 64 65
        on right: 45 64
    field <str> (82)
        on left: 66
        on right: 64 65
    identifiers <str> (83)
        on left: 67 68
        on right: 66 67 71 72 83 84
    vardefs <str> (84)
        on left: 69 70
        on right: 3
    variable_defs <str> (85)
        on left: 71 72
        on right: 69 71
    subprograms <str> (86)
        on left: 73 74
        on right: 1 73 76
    subprogram <str> (87)
        on left: 75 76
        on right: 73
    sub_header <str> (88)
        on left: 77 78 79 80
        on right: 75 76
    formal_parameters <str> (89)
        on left: 81 82
        on right: 77 78 79
    parameter_list <str> (90)
        on left: 83 84
        on right: 81 83
    pass <str> (91)
        on left: 85 86
        on right: 83 84
    comp_statement <str> (92)
        on left: 87
        on right: 1 76 98
    statements <str> (93)
        on left: 88 89
        on right: 87 88
    statement <str> (94)
        on left: 90 91 92 93 94 95 96 97 98 99
        on right: 88 89 102 103 104 109 115 117 118 119 122
    assignment <str> (95)
        on left: 100 101
        on right: 90
    if_statement <str> (96)
        on left: 102 103
        on right: 91
    if_tail <str> (97)
        on left: 104 105
        on right: 102 103
    case_statement <str> (98)
        on left: 106
        on right: 92
    cases <str> (99)
        on left: 107 108
        on right: 106 107
    single_case <str> (100)
        on left: 109 110
        on right: 107 108
    label_list <str> (101)
        on left: 111 112
        on right: 109 111
    label <str> (102)
        on left: 113 114
        on right: 111 112
    case_tail <str> (103)
        on left: 115 116
        on right: 106
    while_statement <str> (104)
        on left: 117 118
        on right: 93
    for_statement <str> (105)
        on left: 119
        on right: 94
    iter_space <str> (106)
        on left: 120 121
        on right: 119
    with_statement <str> (107)
        on left: 122
        on right: 95
    subprogram_call <str> (108)
        on left: 123 124
        on right: 96
    io_statement <str> (109)
        on left: 125 126
        on right: 97
    read_list <str> (110)
        on left: 127 128
        on right: 125 127
    read_item <str> (111)
        on left: 129
        on right: 127 128
    write_list <str> (112)
        on left: 130 131
        on right: 126 130
    write_item <str> (113)
        on left: 132 133
        on right: 130 131


State 0

    0 $accept: • program "EOF"

    "program"  shift, and go to state 1

    program  go to state 2
    header   go to state 3


State 1

    2 header: "program" • "IDENTIFIER" ";"

    "IDENTIFIER"  shift, and go to state 4


State 2

    0 $accept: program • "EOF"

    "EOF"  shift, and go to state 5


State 3

    1 program: header • declarations subprograms comp_statement "."

    "const"  shift, and go to state 6

    $default  reduce using rule 5 (constdefs)

    declarations  go to state 7
    constdefs     go to state 8


State 4

    2 header: "program" "IDENTIFIER" • ";"

    ";"  shift, and go to state 9


State 5

    0 $accept: program "EOF" •

    $default  accept


State 6

    4 constdefs: "const" • constant_defs ";"

    "IDENTIFIER"  shift, and go to state 10

    constant_defs  go to state 11


State 7

    1 program: header declarations • subprograms comp_statement "."

    $default  reduce using rule 74 (subprograms)

    subprograms  go to state 12


State 8

    3 declarations: constdefs • typedefs vardefs

    "type"  shift, and go to state 13

    $default  reduce using rule 39 (typedefs)

    typedefs  go to state 14


State 9

    2 header: "program" "IDENTIFIER" ";" •

    $default  reduce using rule 2 (header)


State 10

    7 constant_defs: "IDENTIFIER" • "=" expression

    "="  shift, and go to state 15


State 11

    4 constdefs: "const" constant_defs • ";"
    6 constant_defs: constant_defs • ";" "IDENTIFIER" "=" expression

    ";"  shift, and go to state 16


State 12

    1 program: header declarations subprograms • comp_statement "."
   73 subprograms: subprograms • subprogram ";"

    "function"   shift, and go to state 17
    "procedure"  shift, and go to state 18
    "begin"      shift, and go to state 19

    subprogram      go to state 20
    sub_header      go to state 21
    comp_statement  go to state 22


State 13

   37 typedefs: "type" • type_defs ";"
   38         | "type" • type_defs error

    "IDENTIFIER"  shift, and go to state 23

    type_defs  go to state 24


State 14

    3 declarations: constdefs typedefs • vardefs

    "var"  shift, and go to state 25

    $default  reduce using rule 70 (vardefs)

    vardefs  go to state 26


State 15

    7 constant_defs: "IDENTIFIER" "=" • expression

    "length"         shift, and go to state 27
    "new"            shift, and go to state 28
    "+ or -"         shift, and go to state 29
    "NOT"            shift, and go to state 30
    "("              shift, and go to state 31
    "["              shift, and go to state 32
    "IDENTIFIER"     shift, and go to state 33
    "ICONST"         shift, and go to state 34
    "RCONST"         shift, and go to state 35
    "BCONST"         shift, and go to state 36
    "CCONST"         shift, and go to state 37
    "list function"  shift, and go to state 38

    expression         go to state 39
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 16

    4 constdefs: "const" constant_defs ";" •
    6 constant_defs: constant_defs ";" • "IDENTIFIER" "=" expression

    "IDENTIFIER"  shift, and go to state 43

    $default  reduce using rule 4 (constdefs)


State 17

   77 sub_header: "function" • "IDENTIFIER" formal_parameters ":" standard_type
   78           | "function" • "IDENTIFIER" formal_parameters ":" "list"
   80           | "function" • "IDENTIFIER"

    "IDENTIFIER"  shift, and go to state 44


State 18

   79 sub_header: "procedure" • "IDENTIFIER" formal_parameters

    "IDENTIFIER"  shift, and go to state 45


State 19

   87 comp_statement: "begin" • statements "end"

    "begin"          shift, and go to state 19
    "if"             shift, and go to state 46
    "while"          shift, and go to state 47
    "case"           shift, and go to state 48
    "for"            shift, and go to state 49
    "with"           shift, and go to state 50
    "read"           shift, and go to state 51
    "write"          shift, and go to state 52
    "IDENTIFIER"     shift, and go to state 53
    "list function"  shift, and go to state 38

    $default  reduce using rule 99 (statement)

    variable         go to state 54
    comp_statement   go to state 55
    statements       go to state 56
    statement        go to state 57
    assignment       go to state 58
    if_statement     go to state 59
    case_statement   go to state 60
    while_statement  go to state 61
    for_statement    go to state 62
    with_statement   go to state 63
    subprogram_call  go to state 64
    io_statement     go to state 65


State 20

   73 subprograms: subprograms subprogram • ";"

    ";"  shift, and go to state 66


State 21

   75 subprogram: sub_header • ";" "forward"
   76           | sub_header • ";" declarations subprograms comp_statement

    ";"  shift, and go to state 67


State 22

    1 program: header declarations subprograms comp_statement • "."

    "."  shift, and go to state 68


State 23

   41 type_defs: "IDENTIFIER" • "=" type_def

    "="  shift, and go to state 69


State 24

   37 typedefs: "type" type_defs • ";"
   38         | "type" type_defs • error
   40 type_defs: type_defs • ";" "IDENTIFIER" "=" type_def

    error  shift, and go to state 70
    ";"    shift, and go to state 71


State 25

   69 vardefs: "var" • variable_defs ";"

    "IDENTIFIER"  shift, and go to state 72

    identifiers    go to state 73
    variable_defs  go to state 74


State 26

    3 declarations: constdefs typedefs vardefs •

    $default  reduce using rule 3 (declarations)


State 27

   19 expression: "length" • "(" expression ")"

    "("  shift, and go to state 75


State 28

   20 expression: "new" • "(" expression ")"

    "("  shift, and go to state 76


State 29

   15 expression: "+ or -" • expression

    "length"         shift, and go to state 27
    "new"            shift, and go to state 28
    "+ or -"         shift, and go to state 29
    "NOT"            shift, and go to state 30
    "("              shift, and go to state 31
    "["              shift, and go to state 32
    "IDENTIFIER"     shift, and go to state 33
    "ICONST"         shift, and go to state 34
    "RCONST"         shift, and go to state 35
    "BCONST"         shift, and go to state 36
    "CCONST"         shift, and go to state 37
    "list function"  shift, and go to state 38

    expression         go to state 77
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 30

   16 expression: "NOT" • expression

    "length"         shift, and go to state 27
    "new"            shift, and go to state 28
    "+ or -"         shift, and go to state 29
    "NOT"            shift, and go to state 30
    "("              shift, and go to state 31
    "["              shift, and go to state 32
    "IDENTIFIER"     shift, and go to state 33
    "ICONST"         shift, and go to state 34
    "RCONST"         shift, and go to state 35
    "BCONST"         shift, and go to state 36
    "CCONST"         shift, and go to state 37
    "list function"  shift, and go to state 38

    expression         go to state 78
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 31

   22 expression: "(" • expression ")"

    "length"         shift, and go to state 27
    "new"            shift, and go to state 28
    "+ or -"         shift, and go to state 29
    "NOT"            shift, and go to state 30
    "("              shift, and go to state 31
    "["              shift, and go to state 32
    "IDENTIFIER"     shift, and go to state 33
    "ICONST"         shift, and go to state 34
    "RCONST"         shift, and go to state 35
    "BCONST"         shift, and go to state 36
    "CCONST"         shift, and go to state 37
    "list function"  shift, and go to state 38

    expression         go to state 79
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 32

   35 setlistexpression: "[" • expressions "]"
   36                  | "[" • "]"

    "length"         shift, and go to state 27
    "new"            shift, and go to state 28
    "+ or -"         shift, and go to state 29
    "NOT"            shift, and go to state 30
    "("              shift, and go to state 31
    "["              shift, and go to state 32
    "]"              shift, and go to state 80
    "IDENTIFIER"     shift, and go to state 33
    "ICONST"         shift, and go to state 34
    "RCONST"         shift, and go to state 35
    "BCONST"         shift, and go to state 36
    "CCONST"         shift, and go to state 37
    "list function"  shift, and go to state 38

    expression         go to state 81
    variable           go to state 40
    expressions        go to state 82
    constant           go to state 41
    setlistexpression  go to state 42


State 33

   18 expression: "IDENTIFIER" • "(" expressions ")"
   24 variable: "IDENTIFIER" •

    "("  shift, and go to state 83

    $default  reduce using rule 24 (variable)


State 34

   31 constant: "ICONST" •

    $default  reduce using rule 31 (constant)


State 35

   32 constant: "RCONST" •

    $default  reduce using rule 32 (constant)


State 36

   33 constant: "BCONST" •

    $default  reduce using rule 33 (constant)


State 37

   34 constant: "CCONST" •

    $default  reduce using rule 34 (constant)


State 38

   27 variable: "list function" • "(" expression ")"
   28         | "list function" • "(" expression error

    "("  shift, and go to state 84


State 39

    7 constant_defs: "IDENTIFIER" "=" expression •
    8 expression: expression • "> or >= or < or <= or <>" expression
    9           | expression • "=" expression
   10           | expression • "IN" expression
   11           | expression • "||" expression
   12           | expression • "+ or -" expression
   13           | expression • "* or / or DIV or MOD or AND" expression
   14           | expression • error expression

    error                          shift, and go to state 85
    "> or >= or < or <= or <>"     shift, and go to state 86
    "+ or -"                       shift, and go to state 87
    "||"                           shift, and go to state 88
    "* or / or DIV or MOD or AND"  shift, and go to state 89
    "IN"                           shift, and go to state 90
    "="                            shift, and go to state 91

    ";"  reduce using rule 7 (constant_defs)


State 40

   17 expression: variable •
   25 variable: variable • "." "IDENTIFIER"
   26         | variable • "[" expressions "]"

    "."  shift, and go to state 92
    "["  shift, and go to state 93

    $default  reduce using rule 17 (expression)


State 41

   21 expression: constant •

    $default  reduce using rule 21 (expression)


State 42

   23 expression: setlistexpression •

    $default  reduce using rule 23 (expression)


State 43

    6 constant_defs: constant_defs ";" "IDENTIFIER" • "=" expression

    "="  shift, and go to state 94


State 44

   77 sub_header: "function" "IDENTIFIER" • formal_parameters ":" standard_type
   78           | "function" "IDENTIFIER" • formal_parameters ":" "list"
   80           | "function" "IDENTIFIER" •

    "("  shift, and go to state 95

    ":"       reduce using rule 82 (formal_parameters)
    $default  reduce using rule 80 (sub_header)

    formal_parameters  go to state 96


State 45

   79 sub_header: "procedure" "IDENTIFIER" • formal_parameters

    "("  shift, and go to state 95

    $default  reduce using rule 82 (formal_parameters)

    formal_parameters  go to state 97


State 46

  102 if_statement: "if" • expression "then" statement if_tail
  103             | "if" • expression error statement if_tail
